# generic

./: CMakeLists.txt  Makefile  Makefile.bk  changelog  readme.md
data/img/: bg.tga
data/lua/: map.lua
docs/: Doxyfile
docs/plantuml/: classes.bk.puml
src/: CMakeLists.txt
src/a_star_map_demo/: CMakeLists.txt  cell.hpp  infobox.hpp  map_demo.cpp  map_demo.hpp  pathfind.hpp  pathfind_utils.hpp
src/a_star_map_demo/include/: army.hpp  infobox.hpp  map.hpp  map_demo.hpp  map_structs.hpp  pathfind.hpp  pathfind_utils.hpp
src/a_star_map_demo/src/: army.cpp  cell.cpp  infobox.cpp  map.cpp  map_demo.cpp
src/base/: CMakeLists.txt  constants.hpp  deleters.hpp  font.cpp  font.hpp  graph.hpp  graph_node.hpp  main.cpp  menu.cpp  menu.hpp  object.hpp  perlin_noise.hpp  random.hpp  shapes.cpp  shapes.hpp  state_interface.hpp  state_machine.cpp  state_machine.hpp  texture.cpp  texture.hpp  transform.hpp  uid.cpp  utf8.cpp  utf8.hpp  utils.hpp
src/base/include/: constants.hpp  custom_texture.hpp  debug_render.hpp  deleters.hpp  enums.hpp  menu.hpp  message_writer.hpp  object.hpp  quaternion.hpp  random.hpp  resource_manager.hpp  state_interface.hpp  state_machine.hpp  structs.hpp  texture.hpp  texture_utils.hpp  transform.hpp  uid.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector3_utils.hpp
src/base/src/: custom_texture.cpp  debug_render.cpp  deleters.cpp  graph.cpp  graph_node.cpp  main.cpp  menu.cpp  message_writer.cpp  object.cpp  perlin_noise.cpp  quaternion.cpp  random.cpp  resource_manager.cpp  shapes.cpp  state_machine.cpp  texture.cpp  texture_utils.cpp  transform.cpp  uid.cpp  utils.cpp  vector2.cpp
src/influence_wars/: CMakeLists.txt  emitter.cpp  emitter.hpp  influence_cell.hpp  influence_wars.cpp  influence_wars.hpp  noise.hpp  voronoi.cpp  voronoi.hpp
src/influence_wars/include/: PerlinNoise.h  influence_cell.hpp  influence_wars.hpp
src/influence_wars/src/: PerlinNoise.cpp  influence_cell.cpp  influence_wars.cpp
src/particles/: CMakeLists.txt
src/particles/include/: particle.hpp  particle_emitter.hpp  particles_state.hpp
src/particles/src/: particle.cpp  particle_emitter.cpp  particle_state.cpp  particles_state.cpp
src/rain/: CMakeLists.txt  drop.cpp  drop.hpp  rain.cpp  rain.hpp
src/rain/include/: drop.hpp  light.hpp  rain.hpp
src/rain/src/: drop.cpp  light.cpp  rain.cpp
src/sdl_gui/: CMakeLists.txt  button.cpp  button.hpp  gui_collider.cpp  gui_collider.hpp  gui_element.cpp  gui_element.hpp  gui_id.hpp  gui_image.cpp  gui_image.hpp  gui_interaction.cpp  gui_interaction.hpp  gui_manager.cpp  gui_manager.hpp  gui_render.hpp  gui_transform.cpp  gui_transform.hpp  label.cpp  label.hpp  sdl_gui_button.cpp  sdl_gui_button.hpp  sdl_gui_checkbox.cpp  sdl_gui_checkbox.hpp  sdl_gui_collider.hpp  sdl_gui_constants.hpp  sdl_gui_container_box.cpp  sdl_gui_container_box.hpp  sdl_gui_element.cpp  sdl_gui_element.hpp  sdl_gui_enums.hpp  sdl_gui_image.cpp  sdl_gui_image.hpp  sdl_gui_interaction.cpp  sdl_gui_interaction.hpp  sdl_gui_label.cpp  sdl_gui_label.hpp  sdl_gui_log.cpp  sdl_gui_log.hpp  sdl_gui_manager.hpp  sdl_gui_resource_manager.cpp  (+7 more)
src/sdl_gui/include/: sdl_gui_base_button.hpp  sdl_gui_button.hpp  sdl_gui_button_transition_colour.hpp  sdl_gui_camera.hpp  sdl_gui_checkbox.hpp  sdl_gui_checkbox_group.hpp  sdl_gui_collider.hpp  sdl_gui_constants.hpp  sdl_gui_container_box.hpp  sdl_gui_element.hpp  sdl_gui_enums.hpp  sdl_gui_font.hpp  sdl_gui_image.hpp  sdl_gui_interaction.hpp  sdl_gui_label.hpp  sdl_gui_layout.hpp  sdl_gui_local_texture.hpp  sdl_gui_manager.hpp  sdl_gui_mouse_interaction.hpp  sdl_gui_panel.hpp  sdl_gui_progress_bar.hpp  sdl_gui_render.hpp  sdl_gui_slider.hpp  sdl_gui_structs.hpp  (+7 more)
src/snake/: CMakeLists.txt  snake_game.cpp  snake_game.hpp
src/solar/: CMakeLists.txt  celestial_body.hpp  orbits.cpp  solar_system.cpp  solar_system.hpp  xeno.cpp
vs/generic/: generic.sln
(+74 files in other folders)
